@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
  
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnomesword, 0.9.devel)
+AM_INIT_AUTOMAKE(gnomesword1, 0.9.devel)
 AM_CONFIG_HEADER(config.h)
 
 dnl 
@@ -282,7 +282,7 @@ src/main/Makefile
 
 
 echo
-echo "Summary of GnomeSword configuration:"
+echo "Summary of GnomeSword1 configuration:"
 echo
 
 if test "x$have_speller" = xyes; then
