@@ -31,7 +31,7 @@ project.type=GNOME
 project.target.type=EXECUTABLE
 project.version=0.7.1
 project.author=The GnomeSWORD Team
-project.source.target=src/main/gnomesword
+project.source.target=src/main/gnomesword1
 
 project.excluded.modules=\
 	intl
