@@ -6,14 +6,14 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=33
-1=34
-2=1317
+0=1
+1=57
+2=160
 3=95
-4=160
-5=57
-6=1
-7=156
+4=1317
+5=34
+6=33
+7=1
 8=34
 9=366
 10=174
@@ -45,17 +45,15 @@ ShowLocals=true
 16=
 17=
 
-[breakpoints]
-0=2,,1,3,0,,settings.c,153,32,0,settings_init,,1030198628,
-
 [filelist]
-0=/home/terry/gnomesword/gnomesword1/src/main/shortcutbar.h
-1=/home/terry/gnomesword/gnomesword1/src/backend/shortcutbar.h
-2=/home/terry/gnomesword/gnomesword1/src/gnome/shortcutbar_main.c
+0=/home/terry/gnomesword/gnomesword1/src/main/sword.c
+1=/home/terry/gnomesword/gnomesword1/src/main/settings.c
+2=/home/terry/gnomesword/gnomesword1/src/backend/shortcutbar.cpp
 3=/home/terry/gnomesword/gnomesword1/src/main/shortcutbar.c
-4=/home/terry/gnomesword/gnomesword1/src/backend/shortcutbar.cpp
-5=/home/terry/gnomesword/gnomesword1/src/main/settings.c
-6=/home/terry/gnomesword/gnomesword1/src/main/sword.c
+4=/home/terry/gnomesword/gnomesword1/src/gnome/shortcutbar_main.c
+5=/home/terry/gnomesword/gnomesword1/src/backend/shortcutbar.h
+6=/home/terry/gnomesword/gnomesword1/src/main/shortcutbar.h
+7=/home/terry/gnomesword/gnomesword1/src/backend/bookmarks.cpp
 
 [replace_text]
 0=oldbmfiles
